// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Primary button should render correctly 1`] = `
<button
  className="button md primary undefined"
>
  Button
</button>
`;

exports[`Button Component Secondary Button should render correctly 1`] = `
<button
  className="button md secondary undefined"
>
  Button
</button>
`;

exports[`Button Component should be able to change the size of the button 1`] = `
<button
  className="button lg primary undefined"
>
  Button
</button>
`;

exports[`Button Component should be able to change the size of the button 2`] = `
<button
  className="button sm primary undefined"
>
  Button
</button>
`;

exports[`Button Component should pass a custom class to the button 1`] = `
<button
  className="button md secondary customClass"
>
  Button
</button>
`;

exports[`Button Component should render the button disabled, and not call the onClick 1`] = `
<button
  className="button md primary disabled undefined"
  disabled={true}
  onClick={[MockFunction]}
>
  Click
</button>
`;

exports[`Button Component should render the button full width 1`] = `
<button
  className="button md secondary fullWidth undefined"
>
  Button
</button>
`;
